# temple

./: .env.example  .gitignore  CLAUDE.md  README.md  project_idea.md  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docker/scripts/: backup.sh  restore.sh  smoke-test.sh
docs/: ARCHITECTURE.md  LEADERSHIP_BRIEF.md  ROADMAP.md  SESSION_RESUME_2026-02-11.md  UPDATES_2026-02-11.md  VISUALS.md
src/temple/: __init__.py  __main__.py  auth.py  combined_server.py  config.py  rest_server.py  server.py
src/temple/memory/: __init__.py  audit_log.py  broker.py  context.py  embedder.py  graph_store.py  hashing.py  llm_extractor.py  vector_store.py
src/temple/tools/: admin_tools.py  context_tools.py  entity_tools.py  memory_tools.py  observation_tools.py  relation_tools.py
tests/: conftest.py  test_audit_log.py  test_broker.py  test_combined_server.py  test_context.py  test_graph_store.py  test_hashing.py  test_llm_extractor.py  test_models.py  test_rest_server.py  test_server_auth.py  test_vector_store.py
