[project]
name = "temple"
version = "0.1.0"
description = "Context-aware memory broker for AI agents via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "onnxruntime>=1.18",
    "optimum[onnxruntime]>=1.19",
    "kuzu>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "anthropic>=0.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temple"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
